# cads-e2e-tests

./: .cruft.json  .gitignore  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  report.json  reports.jsonl  sample_checks.sh
.github/workflows/: on-push.yml
cads_e2e_tests/: __init__.py  __main__.py  cli.py  client.py  exceptions.py  models.py  reporter.py  utils.py  widgets.py
ci/: environment-ci.yml  environment-integration.yml
docs/: conf.py  index.md
templates/: requests_ads.yaml  requests_format_check.yaml  requests_observations.yaml
tests/: conftest.py  integration_10_client.py  integration_10_reporter.py  integration_20_cli.py  test_00_version.py  test_10_models.py  test_10_utils.py  test_20_cli.py  test_30_utils.py
