[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "attrs",
  "datapi>=0.3.0",
  "joblib",
  "pydantic",
  "pyyaml",
  "tqdm",
  "typer"
]
description = "CADS E2E Tests"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-e2e-tests"
readme = "README.md"

[project.scripts]
cads-e2e-tests = "cads_e2e_tests.__main__:main"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "joblib"
]

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["cads_e2e_tests"]

[tool.setuptools_scm]
write_to = "cads_e2e_tests/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
